# floorplan-service

./: .env.example  .gitignore  index.js  package-lock.json  package.json
bench/: a1-baseline.js  a1-result.json  a2-gemini-svg.js  a2-result.json  a3-gemini-bbox-refine.js  a4-sharp-preprocess.js  a5-pixel-coords.js  a6-gemini-pro.js  a6-result.json  a7-vectorize.js  a8-grounded-sam.js  a8-result.json  a9-segmentation.js  compare-coords.js  contour-utils.js  run-all.js  run-and-save.js  utils.js
docs/: floor-plan-api-research.md
docs/plans/: 2026-02-13-floorplan-analysis-design.md  2026-02-13-floorplan-analysis-implementation.md  2026-02-13-web-viewer-design.md  2026-02-13-web-viewer-implementation.md  2026-02-16-staged-recognition-design.md  2026-02-16-staged-recognition-implementation.md  2026-02-21-segmentation-model-design.md  2026-02-21-segmentation-model-implementation.md
public/: app.js  index.html  style.css
src/: gemini.js  prompt.js  segmentation.js
test/: api.test.js  e2e.test.js  gemini.test.js  prompt.test.js
test-data/: U0HuSArq.jpg.json  U36wysWv.jpg.json  U3D6Agrz.jpg.json  U3laAgYJ.jpg.json
training/: .gitignore  README.md  cog.yaml  cog_predict.py  config.py  dataset.py  floorplan_generator.py  generate_synthetic.py  loss.py  predict.py  prepare_cubicasa.py  pyproject.toml  requirements.txt  serve.py  test_vectorize.py  train.py  train_colab.ipynb  vectorize.py
