[project]
name = "segformer-floorplan-training"
version = "0.1.0"
description = "SegFormer semantic segmentation model for floorplan analysis"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "opencv-python-headless>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "albumentations>=1.3.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "huggingface-hub>=0.19.0",
    "svgpathtools>=1.6.0",
]
